--- a/index.html
+++ b/index.html
@@ -125,11 +125,13 @@
 </div>
 
 <div class="berezka">
+    <a href="http://woodcup.ru">&nbsp;</a>
     <div class="wrap">
         <div class="berezka_text">
+          
             <div class="berezka_">
                 <div class="berezka_plashka">
-                    <a href="http://woodcup.ru">berёzka</a>
+                    <span>berёzka</span>
                 </div>
                 <div class="berezka_description">
                     <p>Биоразлагаемая посуда</p>
@@ -142,7 +144,6 @@
     </div>
 </div>
 
-<?php include(TEMPLATEPATH.'/templates/frontpage/blog/projets.php');?>
 
 <div class="projets">
 
