--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <div class="science">
-                Занимаюсь наукой — мой профиль на <i class="icon-mendeley"></i> <a href="https://www.mendeley.com/profiles/nikolay-semenov7/" class="men ">менделей</a>, <i class="icon-researchgate"></i> <a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg ">ресечгейт</a> и <i class="icon-googlescholar"></i> <a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google ">Гугл академия</a>.
+                Занимаюсь наукой — мой профиль на <i class="icon-mendeley"></i> <!--<a href="https://www.mendeley.com/profiles/nikolay-semenov7/" class="men ">менделей</a>,--> <i class="icon-researchgate"></i> <a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg ">ресечгейт</a> и <i class="icon-googlescholar"></i> <a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google ">Гугл академия</a>.
             </div>
         </div>
     </div>
