--- a/design/index.html
+++ b/design/index.html
@@ -22,7 +22,7 @@
 </section>
 <section>
     <div class="txt">
-        <p><span id="due"></span>&nbsp;года разрабатываю и поддерживаю сайты института. За это время с нуля сделал <a href="https://iam.ras.ru">главный сайт</a>, переделал <a href="http://mkmk.ras.ru">сайт журнала</a>, перевел на CMS, добавил импорт из елайбрари, поиск и английский вариант. Для проводимых в Институте конференций разработал <a href="https://iam.ras.ru/conferences">раздел</a> с регистрацией, автоматической обработкой оплаты и созданием программки конференции, которая импортируется в RTF. Для каждого участника сделана персональная страничка, а для организаторов раздел управления и страница создания бейджиков. Для аспирантов разработал <a href="https://iam.ras.ru/dls">цифровое портфолио</a>.</p>
+        <p><span id="due"></span>&nbsp;года разрабатываю и поддерживаю сайты института. За это время с нуля сделал <a href="https://iam.ras.ru">главный сайт</a>, переделал <a href="https://mkmk.ras.ru">сайт журнала</a>, перевел на CMS, добавил импорт из елайбрари, поиск и английский вариант. Для проводимых в Институте конференций разработал <a href="https://iam.ras.ru/conferences">раздел</a> с регистрацией, автоматической обработкой оплаты и созданием программки конференции, которая импортируется в RTF. Для каждого участника сделана персональная страничка, а для организаторов раздел управления и страница создания бейджиков. Для аспирантов разработал <a href="https://www.behance.net/gallery/76982723/Online-Library">цифровое портфолио</a>.</p>
     </div>
 </section>
 
