--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Николай Семенов - материаловед</title>
@@ -51,15 +51,21 @@
 <div class="frontpage blog">
    
 <div class="wrap">
+   <span id="switch-lang"><span lang="ru">En</span><span lang="en">Ру</span></span>
     <div class="header">
         <div class="header_wrap">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                     <div class="fp_head_rightblock">
                         <div class="fp_name">
-                            Николай Семенов
+                            <span lang="ru">Николай Семенов</span>
+                            <span lang="en">Nikolay Semenov</span>
                         </div>
-                        <div class="fp_data">Инженер, материаловед</div>
+                        <div class="fp_data">
+                       
+                        <span lang="ru">Инженер, материаловед</span>
+                        <span lang="en">Engineer, materials scientist</span>
+                        </div>
 
                         <div class="fp_head_leftblock">
                             <a href="mailto:polymers@nikolaysemenov.ru" class="mail">polymers@nikolaysemenov.ru</a>
@@ -67,7 +73,7 @@
                         </div>
 
                         <div class="fp_resume">
-                            <p>Резюме в <a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957" class="in"></a> и <a href="https://hh.ru/resume/05deef85ff044a1fed0039ed1f717575554b49" class="hh"></a> </p>
+                            <p><span lang="ru">Резюме в</span><span lang="en">Resume in</span> <a href="https://semenovnikolay.notion.site/Nikolay-Semenov-91e875b7225a45c694bb41a0acd8de4e">Notions</a></p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +88,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
             <div class="info">
                 <div class="projets_top">
-                    <p><span id="due"></span>&nbsp;лет разрабатываю и&nbsp;изучаю полимерные композиты. Знаю ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;и&nbsp;много других аббревиатур. Знаком с&nbsp;процессами смешения, переработки и&nbsp;контроля качества.
+                    <p><span id="due"></span><span lang="ru">&nbsp;лет разрабатываю и&nbsp;изучаю полимерные композиты. Знаю ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;и&nbsp;много других аббревиатур. Знаком с&nbsp;процессами смешения, переработки и&nbsp;контроля качества.</span><span lang="en">&nbsp;years developing and&nbsp;studying polymer composites. I know ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;and&nbsp;many other acronyms. Familiar with&nbsp;mixing, processing, and&nbsp;quality control processes.</span>
 
                         <a href="mono.pdf" style="background-image:url(img/book.png);" class="book">
                             <span class="icon-download"></span>
@@ -92,8 +98,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="science">
-                Занимаюсь наукой — мой профиль на <!--<i class="icon-mendeley"></i> <a href="https://www.mendeley.com/profiles/nikolay-semenov7/" class="men ">менделей</a>,--> <i class="icon-researchgate"></i> <a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg ">ресечгейт</a> и <i class="icon-googlescholar"></i> <a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google ">Гугл академия</a>.
+            <div class="science"><span lang="ru">Занимаюсь наукой — мой профиль на </span><span lang="en">I do a little bit of science</span> <i class="icon-researchgate"></i>&nbsp;<a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg "><span lang="ru">Ресечгейт</span><span lang="en">ResearchGate</span></a> <span lang="ru">и</span><span lang="en">or</span> <i class="icon-googlescholar"></i> <a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google ">&nbsp;<span lang="ru">Гугл академия</span><span lang="en">Google</span></a>.
             </div>
         </div>
     </div>
@@ -113,7 +118,7 @@
                     <span>berёzka</span>
                 </div>
                 <div class="berezka_description">
-                    <p>Биоразлагаемая посуда</p>
+                    <p><span lang="ru">Биоразлагаемая посуда</span><span lang="en">Biodegradable tableware</span></p>
                 </div>
             </div>
         </div>
@@ -134,9 +139,12 @@
             </div>
             <div class="item_titel">
                 <div class="big_titel">
-                    <span>Древесно</span><br>
-                    <span>полимерный</span><br>
-                    <span>композит</span>
+                    <span lang="ru">Древесно</span>
+                    <span lang="ru">полимерный</span>
+                    <span lang="ru">композит</span>                    
+                    <span lang="en">Wood</span>
+                    <span lang="en">polymer</span>
+                    <span lang="en">composite</span>                      
                 </div>
                 <div class="link_titel">
 <!-- <a href="http://rkk-composite.ru/" class="link"><i class=" icon-arrow-up-right"></i> производитель</a> -->
@@ -144,12 +152,12 @@
             </div>
             <div class="sub_video">
                 <ul>
-                    <li><i class="icon-play"></i> <a href="https://www.youtube.com/watch?v=NgzjMw39GYs">Сайдинг</a></li>
+                    <li><i class="icon-play"></i> <a href="https://www.youtube.com/watch?v=NgzjMw39GYs"><span lang="ru">Сайдинг</span><span lang="en">Siding</span></a></li>
                     <li><a href=""></a></li>
                 </ul>
             </div>
             <div class="item_descriptor">
-                <p>Разработал рецептуру материала для террасной доски с&nbsp;классом пожароопасности не&nbsp;ниже&nbsp;Г2</p>
+                <p><span lang="ru">Разработал рецептуру материала для террасной доски с&nbsp;классом пожароопасности не&nbsp;ниже&nbsp;Г2</span><span lang="en">Developed a material formulation for decking with at least G2 fire class</span></p>
             </div>
         </div>
     </div>
@@ -222,7 +230,8 @@
 
 
 <!-- scripts -->
-<script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.js"></script>
+<script src="jquery.js"></script>
+<script src="jquery.cookie.min.js"></script>
 <script>
    var st = 2009;
    var cur = new Date().getFullYear(); 
@@ -231,6 +240,8 @@
      var due = document.getElementById('due');
     due.textContent = d;
 </script>
+
+<script src="script.js"></script>
 
 <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(16681432, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/16681432" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 </body>
