--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
             <div class="info">
                 <div class="projets_top">
-                    <p><span id="due"></span><span lang="ru">&nbsp;лет разрабатываю и&nbsp;изучаю полимерные композиты. Знаю ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;и&nbsp;много других аббревиатур. Знаком с&nbsp;процессами смешения, переработки и&nbsp;контроля качества.</span><span lang="en">&nbsp;years developing and&nbsp;studying polymer composites. I know ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;and&nbsp;many other acronyms. Familiar with&nbsp;mixing, processing, and&nbsp;quality control processes.</span>
+                    <p><span lang="ru"><span id="due"></span>&nbsp;лет разрабатываю и&nbsp;изучаю полимерные композиты. Знаю ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;и&nbsp;много других аббревиатур. Знаком с&nbsp;процессами смешения, переработки и&nbsp;контроля качества.</span><span lang="en">I&nbsp;am polymer engineer and polymer science researcher. I&nbsp;have been developing and studying polymer composites since 2009.<br>My&nbsp;main scientific activity is&nbsp;devoted to&nbsp;electrically controlled materials. My&nbsp;current engineering activity is&nbsp;dedicated to&nbsp;work with biodegradable compositions.</span>
 
                         <a href="mono.pdf" style="background-image:url(img/book.png);" class="book">
                             <span class="icon-download"></span>
