--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
 </head>
 <body class="">
 
+<div id="switch_top">
+   <div class="wrap">
+     <span id="switch-lang"><span lang="ru">En</span><span lang="en">Ру</span></span>
+   </div>
+</div>
+
 <div class="frontpage blog">
    
 <div class="wrap">
-   <span id="switch-lang"><span lang="ru">En</span><span lang="en">Ру</span></span>
+  
     <div class="header">
         <div class="header_wrap">
             <div class="row">
