--- a/berezka/index.html
+++ b/berezka/index.html
@@ -69,12 +69,12 @@
             <div class="block">
                <div class="row">
    <div class="col-xs-4 wow animate__animated animate__backInLeft animate__slow">
-      <div class="text_content_light" lang="ru">
+      <div class="text_content light" lang="ru">
            <h2>Мы сделали посуду, которая не вредит</h2>
            <hr>
            <p>Наши стаканчики, крышечки, вилки и тарелки — особенные. Мы делаем их из опилок и биополимера. Сделать такой прочный и гибкий материал без продуктов нефтехимии было сложно, и в России мы пока единственные, кто использует эту технологию. Но верим, что скоро вырастем из статуса «стартапа», ведь не одни мы мечтаем оставить детям живую планету!</p>
        </div>
-       <div class="text_content_light" lang="en">
+       <div class="text_content light" lang="en">
            <h2>We made dishes that don't harm</h2>
            <hr>
            <p>Our cups, lids, forks and plates are special. We make them from sawdust and biopolymer. It was difficult to make such a strong and flexible material without petrochemical products, and so far we are the only ones in Russia who use this technology. But we believe that soon we will grow out of our "startup" status, because we are not the only ones who dream of leaving a living planet to children!</p>
