--- a/berezka/index.html
+++ b/berezka/index.html
@@ -9,6 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="pic/favicon.ico">
         <meta property="og:image" content="pic/cycle.jpeg" />
         
 
