--- a/badge/index.html
+++ b/badge/index.html
@@ -236,7 +236,7 @@
 
    
      
-7<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/0.9.89/jsrender.min.js"></script>
 
 
