--- a/recipe/index.html
+++ b/recipe/index.html
@@ -13,59 +13,47 @@
 <body class="">
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-3">
-            <form role="form" id="" class="side_list">
-                <div class="form-group">
-                    <div class="form-group composition" id="composite"></div>
-                </div>
-            </form>
+  <div class="row">
+    <div class="col-md-3">
+      <form role="form" id="" class="side_list">
+        <div class="form-group">
+          <div class="form-group composition" id="composite"></div>
         </div>
-        <div class="col-md-5">
-
-            <form action="" id="get_recipe">
-                <div class="form-group">
-                    <div class="form-group">
-
- <table class="table">
-  <thead>
-    <tr>
-      <th style="width: 60%;">Сырье</th>
-      <th style="width: 20%;">м.ч.</th>
-      <th style="width: 20%;">%</th>
-    </tr>
-  </thead>
-  <tbody id="recipe">
-
-  </tbody>
-</table>
-                      </div>
-                </div>
-            </form>
-
-        </div>
-        <div class="col-md-4">
-           
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">Сырье</th>
-      <th scope="col">м.ч.</th>
-      <th scope="col">%</th>
-    </tr>
-  </thead>
-  <tbody id="fin_recip">
-
-  </tbody>
-</table>           
-           
-            <code></code>
-        </div>
+      </form>
     </div>
+    <div class="col-md-5">
+      <form action="" id="get_recipe">
+        <div class="form-group">
+          <div class="form-group">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th style="width: 60%;">Сырье</th>
+                  <th style="width: 20%;">м.ч.</th>
+                  <th style="width: 20%;">%</th>
+                </tr>
+              </thead>
+              <tbody id="recipe"></tbody>
+            </table>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-4">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Сырье</th>
+            <th scope="col">м.ч.</th>
+            <th scope="col">%</th>
+          </tr>
+        </thead>
+        <tbody id="fin_recip"></tbody>
+      </table>
+      <code></code>
+    </div>
+  </div>
 </div>
-
-
-
 
 
 <!-- scripts -->
