--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
             <div class="info">
                 <div class="projets_top">
-                    <p><span lang="ru"><span id="due"></span>&nbsp;лет разрабатываю и&nbsp;изучаю полимерные композиты. Знаю ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;и&nbsp;много других аббревиатур. Знаком с&nbsp;процессами смешения, переработки и&nbsp;контроля качества.</span><span lang="en">I&nbsp;am a&nbsp;polymer engineer and polymer science researcher with over a&nbsp;decade of&nbsp;experience in&nbsp;developing and studying polymer composites. My&nbsp;main scientific focus is&nbsp;on&nbsp;electrically controlled materials, while my&nbsp;current engineering work centers around biodegradable compositions.</span>
+                    <p><span lang="ru"><span id="due"></span>&nbsp;лет разрабатываю и&nbsp;изучаю полимерные композиты. Знаю ABS, PVC, SEBS, NR, SBR, PI, PA, ASA, PP, HIPS, PE&nbsp;и&nbsp;много других аббревиатур. Знаком с&nbsp;процессами смешения, переработки и&nbsp;контроля качества.</span><span lang="en">I&nbsp;am a&nbsp;polymer engineer and polymer science researcher with over a&nbsp;decade of&nbsp;experience in&nbsp;developing and studying polymer composites. My&nbsp;main scientific focus is&nbsp;on&nbsp;<a href="https://youtu.be/bEgNZA_mlrk">electrically controlled materials</a>, while my&nbsp;current engineering work centers around biodegradable compositions.</span>
 
                         <a href="mono.pdf" style="background-image:url(img/book.png);" class="book">
                             <span class="icon-download"></span>
