--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <a href="mono.pdf" class="book"></a>
     </div>
     <div class="block science">
-        <div class="txt"><span lang="en">I made<br>little bit of science</span><span lang="ru">Я немного<br>занимался наукой</span><br/><i class="icon-researchgate"></i>&nbsp;<a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg "><span lang="ru">Ресечгейт</span><span lang="en">ResearchGate</span></a> <span lang="ru">и</span><span lang="en">or</span> <i class="icon-googlescholar"></i> <a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google ">&nbsp;<span lang="ru">Гугл</span><span lang="en">Google</span></a>.</div>
+        <div class="txt"><span lang="en">I made<br>little bit of science</span><span lang="ru">Я немного<br>занимался наукой</span><br/><i class="icon-researchgate"></i>&nbsp;<a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg "><span lang="en">ResearchGate</span><span lang="ru">Ресечгейт</span></a> <span lang="ru">и</span><span lang="en">or</span> <i class="icon-googlescholar"></i>&nbsp;<a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google "><span lang="en">Google</span><span lang="ru">Гугл</span></a>.</div>
     </div>
     <div class="block video">
         <a href="https://www.youtube.com/watch?v=bEgNZA_mlrk&t=203s" class="ervideo er"><i class="icon-play1"></i></a>
@@ -127,6 +127,7 @@
             <div class="teach_list">
                 <div class="row">
                     <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+<div class="teach_card">
 <div class="lectname">
     <span lang="en">Rheology of Polymer Composites</span>
     <span lang="ru">Реология полимерных композитов</span>
@@ -136,8 +137,10 @@
     <span lang="ru">36 часов лекций, 18 часов лабораторных работ и семинаров</span>
 </div>
 <div class="lectdate">2016</div>
+</div>
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+<div class="teach_card">                      
 <div class="lectname">
     <span lang="en">Introduction to Polymer Science</span>
     <span lang="ru">Введение в полимерное материаловедение </span>
@@ -147,8 +150,10 @@
     <span lang="ru">40 часов лекций, 12 часов лабораторных работ</span>
 </div>
 <div class="lectdate">2021</div>
+</div>  
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+<div class="teach_card">
 <div class="lectname">
     <span lang="en">Atomic force microscopy</span>
     <span lang="ru">Атомно-силовая микроскопия</span>
@@ -158,16 +163,17 @@
     <span lang="ru">практический курс, 36 ч</span>
 </div>
 <div class="lectdate"></div>
+</div>
                     </div>
 
                     <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+<div class="teach_card">                       
                         <div class="supervising">
-
 <p lang="en">Supervisor of 5 Masters Students of Moscow Aviation University (MAI)</p><p lang="ru">Научный руководитель 5 магистрантов Московского авиационного университета (МАИ)</p>
 <p lang="en">Advisor one student of Moscow Technology University</p>
 <p lang="ru">Консультант одного студента Московского технологического университета</p>
-
                         </div>
+</div>                         
                     </div>
                 </div>
             </div>
