--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
+<!-- TODO @ksider-->
 <!DOCTYPE html>
 <html>
-
 <head>
-    
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X25WXQ0818"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -14,6 +13,7 @@
 
     <meta charset="UTF-8">
     <title>Nikolay Semenov</title>
+
     <meta name="description" content="Material scientist">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -39,7 +39,7 @@
                         <span lang="ru">Николай Семенов</span>
                     </div>
                     <div class="titel">
-                        <span lang="en">Polymer Scientist, Rheologist, and Materials Engineer</span>
+                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist, Materials Engineer and Head of R&D in <a href="https://bpacks.eco">Bpacks.eco</a></span>
                         <span lang="ru">Полимерщик, реолог и инженер по материалам</span>
                     </div>
                 </div>
