--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span lang="ru">Николай Семенов</span>
                     </div>
                     <div class="titel">
-                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist, Materials Engineer and Head of R&D in <a href="https://bpacks.eco">Bpacks.eco</a></span>
+                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist, Materials Engineer and Head of R&D in <a href="https://bpacks.eco">Bpacks</a></span>
                         <span lang="ru">Полимерщик, реолог и инженер по материалам</span>
                     </div>
                 </div>
