--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X25WXQ0818"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'G-X25WXQ0818');
@@ -37,7 +37,7 @@
                         <span lang="ru">Николай Семенов</span>
                     </div>
                     <div class="titel">
-                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist, Materials Engineer and Head of R&D in <a href="https://bpacks.eco">Bpacks</a></span>
+                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist, Head of R&D in&nbsp;<a href="https://bpacks.eco">Bpacks</a></span>
                         <span lang="ru">Полимерщик, реолог и инженер по материалам</span>
                     </div>
                 </div>
@@ -73,12 +73,6 @@
                 <p lang="en">I'm a polymer materials science researcher and engineer with a university education in Polymer Physics and Chemistry, and a PhD in mechanics. Since 2008, I've worked in polymer science, contributing to various projects such as active elastomeric fillers, power line vibration damping  materials, silicone insulators, wood-polymer composites, and biodegradable materials. My current role involves research and development in biobased polymers compounds. I possess extensive knowledge of polymer laboratory techniques, mechanics, and chemistry, as well as processing techniques such as extrusion, injection molding, compounding, etc.</p>
                 <p lang="ru">Я исследователь и инженер в области полимерного материаловедения с университетским образованием в области физики и химии полимеров и степенью кандидата наук в области механики. С 2008 года я работаю с полимерными материалами, участвуя в различных проектах, таких как разработка активных эластомерных наполнителей, материалов для гашения вибрации ЛЭП, силиконовых изоляторов, древесно-полимерных композитов и биоразлагаемых материалов. В настоящее время я занимаюсь исследованиями и разработкой полимерных композитов на основе биополимеров. Я обладаю обширными знаниями в области лабораторных методов исследований, механики и химии, а также технологий переработки, таких как экструзия, литье под давлением, компаундирование и т.д.</p>
             </div>
-
-
-
-
-        </div>
-    </div>
 
 <div class="portfolio">
 
@@ -198,6 +192,8 @@
     </div>        
 </div>
 
+</div>
+</div>
 
 
 
