--- a/index.html
+++ b/index.html
@@ -69,19 +69,20 @@
                 </div>
             </div>
         </div>
+        
         <div class="main_right">
-            <div class="fist_block">
-                <p lang="en">I'm a polymer materials science researcher and engineer with a university education in Polymer Physics and Chemistry, and a PhD in mechanics. Since 2008, I've worked in polymer science, contributing to various projects such as active elastomeric fillers, power line vibration damping  materials, silicone insulators, wood-polymer composites, and biodegradable materials. My current role involves research and development in biobased polymers compounds. <!-- I possess extensive knowledge of polymer laboratory techniques, mechanics, and chemistry, as well as processing techniques such as extrusion, injection molding, compounding, etc.--></p>
-                <p lang="ru">Я исследователь и инженер в области полимерного материаловедения с университетским образованием в области физики и химии полимеров и степенью кандидата наук в области механики. С 2008 года я работаю с полимерными материалами, участвуя в различных проектах, таких как разработка активных эластомерных наполнителей, материалов для гашения вибрации ЛЭП, силиконовых изоляторов, древесно-полимерных композитов и биоразлагаемых материалов. В настоящее время я занимаюсь исследованиями и разработкой полимерных композитов на основе биополимеров. <!--Я обладаю обширными знаниями в области лабораторных методов исследований, механики и химии, а также технологий переработки, таких как экструзия, литье под давлением, компаундирование и т.д.--></p>
-            </div>
+<div class="fist_block">
+    <p lang="en">I'm a polymer materials science researcher and engineer with a university education in Polymer Physics and Chemistry, and a PhD in mechanics. Since 2008, I've worked in polymer science, contributing to various projects such as active elastomeric fillers, power line vibration damping  materials, silicone insulators, wood-polymer composites, and biodegradable materials. My current role involves research and development in biobased polymers compounds. <!-- I possess extensive knowledge of polymer laboratory techniques, mechanics, and chemistry, as well as processing techniques such as extrusion, injection molding, compounding, etc.--></p>
+    <p lang="ru">Я исследователь и инженер в области полимерного материаловедения с университетским образованием в области физики и химии полимеров и степенью кандидата наук в области механики. С 2008 года я работаю с полимерными материалами, участвуя в различных проектах, таких как разработка активных эластомерных наполнителей, материалов для гашения вибрации ЛЭП, силиконовых изоляторов, древесно-полимерных композитов и биоразлагаемых материалов. В настоящее время я занимаюсь исследованиями и разработкой полимерных композитов на основе биополимеров. <!--Я обладаю обширными знаниями в области лабораторных методов исследований, механики и химии, а также технологий переработки, таких как экструзия, литье под давлением, компаундирование и т.д.--></p>
+</div>
 
-<div class="portfolio">
+<div class="portfolio"  id="teach">
     <div class="portfolio_block">
             <div class="column col1">
                 <div class="block bookblock">
                     <a href="mono.pdf" class="book"></a>
                 </div>
-                <div class="block science" id="teach">
+                <div class="block science">
                     <div class="txt"><span lang="en">I made<br>little bit of science</span><span lang="ru">Я немного<br>занимался наукой</span><br/><i class="icon-researchgate"></i>&nbsp;<a href="https://www.researchgate.net/profile/Nikolay_Semenov4" class="rg "><span lang="en">ResearchGate</span><span lang="ru">Ресечгейт</span></a> <span lang="ru">и</span><span lang="en">or</span> <i class="icon-googlescholar"></i>&nbsp;<a href="https://scholar.google.ru/citations?user=QD5YQOMAAAAJ" class="google "><span lang="en">Google</span><span lang="ru">Гугл</span></a>.</div>
                 </div>
                 <div class="block video">
