--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span lang="ru">Николай Семенов</span>
                     </div>
                     <div class="titel">
-                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist, Head of R&D in&nbsp;<a href="https://bpacks.eco">Bpacks</a></span>
+                        <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Polymer Scientist,<br>Head of R&D in&nbsp;<a href="https://bpacks.eco">Bpacks</a></span>
                         <span lang="ru">Полимерщик, реолог и инженер по материалам</span>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="main_right">
 <div class="fist_block">
     <p lang="en">I'm a polymer materials science researcher and engineer with a university education in Polymer Physics and Chemistry, and a PhD in mechanics. Since 2008, I've worked in polymer science, contributing to various projects such as active elastomeric fillers, power line vibration damping  materials, silicone insulators, wood-polymer composites, and biodegradable materials. My current role involves research and development in biobased polymers compounds. <!-- I possess extensive knowledge of polymer laboratory techniques, mechanics, and chemistry, as well as processing techniques such as extrusion, injection molding, compounding, etc.--></p>
