--- a/emoji.html
+++ b/emoji.html
@@ -143,9 +143,9 @@ fetchAndFlattenEmojiArrays(jsonUrl)
             и команды делать не будут
         </div>
 
-        <button class="pure-button" onclick="changeAllEmojis()">Изменить все эмоджи</button>
+        <button class="pure-button" onclick="changeAllEmojis()">Гадать</button>
       <!-- <button class="pure-button" onclick="resetEmojis()">Ресет</button>--> 
-        <button class="pure-button" onclick="postToTwitter()">Постинг в Твиттер</button>
+        <button class="pure-button" onclick="postToTwitter()">Твитнуть</button>
     </div>
 
         <!-- Yandex.Metrika counter -->   
