--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <div class="social_block">
                     <div class="social">
 <ul class="social_round">
-   <!-- <li>
-        <a href="https://twitter.com/Ksider"><i class="icon-twitter"></i></a>
-    </li>-->
+
     <li>
         <a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957"><i class="icon-linkedin1"></i></a>
     </li>
@@ -58,6 +56,9 @@
     </li>    
     <li>
         <a href="https://api.whatsapp.com/send?phone=79265749813"><i class="icon-whatsapp"></i></a>
+    </li>
+    <li>
+        <a href="https://www.flickr.com/photos/nikolaysemenov/"><i class="icon-flickr"></i></a>
     </li>
 </ul>
                     </div>
