--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <li>
         <a href="https://www.flickr.com/photos/nikolaysemenov/"><i class="icon-flickr"></i></a>
     </li>
+    <li><a href="https://yandex.ru/q/profile/ksider/">q</a></li>
 </ul>
                     </div>
                 </div>
