--- a/index.html
+++ b/index.html
@@ -45,20 +45,30 @@
 <ul class="social_round">
 
     <li>
-        <a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957"><i class="icon-linkedin1"></i></a>
+        <a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957">
+            <!-- <i class="icon-linkedin1"></i> -->
+        </a>
     </li>
     <li>
-        <a href="https://www.youtube.com/channel/UCMXMWV1WJLaMRaTcsEFLWVA"><i class="icon-youtube3"></i></a>
+        <a href="https://www.youtube.com/channel/UCMXMWV1WJLaMRaTcsEFLWVA">
+            <!-- <i class="icon-youtube3"></i> -->ytb
+        </a>
     </li>    
     
     <li>
-        <a href="https://t.me/nikolaysemenov"><i class="icon-telegram1"></i></a>
+        <a href="https://t.me/nikolaysemenov">
+            <!-- <i class="icon-telegram1"></i> -->msg
+        </a>
     </li>    
     <li>
-        <a href="https://api.whatsapp.com/send?phone=79265749813"><i class="icon-whatsapp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=79265749813">
+            <!-- <i class="icon-whatsapp"></i> -->wsap
+        </a>
     </li>
     <li>
-        <a href="https://www.flickr.com/photos/nikolaysemenov/"><i class="icon-flickr"></i></a>
+        <a href="https://www.flickr.com/photos/nikolaysemenov/">
+            <!-- <i class="icon-flickr"></i> --> fcr
+        </a>
     </li>
     <li><a href="https://yandex.ru/q/profile/ksider/">q</a></li>
 </ul>
