--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <li>
         <a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957">
-            <!-- <i class="icon-linkedin1"></i> -->
+            <!-- <i class="icon-linkedin1"></i> -->ld
         </a>
     </li>
     <li>
