--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </li>    
     <li>
         <a href="https://api.whatsapp.com/send?phone=79265749813">
-            <!-- <i class="icon-whatsapp"></i> -->wsap
+            <!-- <i class="icon-whatsapp"></i> -->msg2
         </a>
     </li>
     <li>
