--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
        
         <div class="grid_layer">
 
-            <div class="name">
+            <div class="name  grid_text">
 <div class="myname">Nikolay<br>Semenov</div>
 <div class="subt"><span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Head of R&D<br><a href="https://bpacks.eco">Bpacks</a> Lab</span></div>
             </div>
 
-<div class="titel">
+<div class="titel grid_text">
 <div class="ttl">Polymer Scientist,<br>Engineer.</div>
 
 <div class="social_block">
 
 <ul class="social_round">    
-    <li><a href="https://t.me/nikolaysemenov"><i class="icon-telegram"></i></a></li>        
-    <li><a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957"><i class="icon-linkedin2"></i></a></li>
+    <li><a href="https://t.me/nikolaysemenov"><i class="icon-send"></i></a></li>        
+    <li><a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957"><i class="icon-linkedin"></i></a></li>
 </ul>
 
 <ul class="social_round">
     <li><a href="https://www.youtube.com/channel/UCMXMWV1WJLaMRaTcsEFLWVA"><i class="icon-youtube"></i></a></li>    
-    <li><a href="https://www.flickr.com/photos/nikolaysemenov/"><i class="icon-flickr"></i> </a></li>
+    <li><a href="https://www.flickr.com/photos/nikolaysemenov/"><i class="icon-instagram"></i></a></li>
     <li><a href=""><i class="icon-twitter"></i> </a></li>
-    <li><a href="https://yandex.ru/q/profile/ksider/"><i class="icon-library"></i></a></li>
+    <li><a href="https://yandex.ru/q/profile/ksider/"><i class="icon-award"></i></a></li>
 </ul>
 
 </div>
