--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="dot_layer">&nbsp;</div> 
     
         <div class="grid_layer">
-            <div class="name  grid_text">
+            <div class="name grid_text">
               <div class="myname">Nikolay<br>Semenov</div>
               <div class="subt"><span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Head of R&D<br><a
                     href="https://bpacks.eco">Bpacks</a> Lab</span></div>
@@ -54,7 +54,26 @@
             </div>
         </div> 
 
-<div class="seconf_layer">&nbsp;</div>
+<div class="seconf_layer">&nbsp;
+
+  <div class="m_grid_text">
+  <div class="subt ">
+    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Head of R&D<br><a
+    href="https://bpacks.eco">Bpacks</a> Lab</span>
+  </div>
+
+  <div class="titel ">
+    <div class="ttl">Polymer Scientist,<br>Engineer.</div>
+    <div class="social_block">
+      <ul class="social_round">
+        <li><a href="https://t.me/nikolaysemenov"><i class="icon-send"></i></a></li>
+        <li><a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957"><i class="icon-linkedin"></i></a></li>
+      </ul>
+    </div>
+  </div> 
+</div>  
+  
+</div>
     
 </div>
 
