--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="grid_layer">
             <div class="name grid_text">
               <div class="myname">Nikolay<br>Semenov</div>
-              <div class="subt"><span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Head of R&D<br><a
+              <div class="subt"><span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Chief Scientific Officer and <abbr title="Chief Technology Officer">CTO</abbr> in <a
                     href="https://bpacks.eco">Bpacks</a> Lab</span></div>
             </div>
             <div class="titel grid_text">
@@ -58,7 +58,7 @@
 
   <div class="m_grid_text">
   <div class="subt ">
-    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Head of R&D<br><a
+    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO/CTO<br><a
     href="https://bpacks.eco">Bpacks</a> Lab</span>
   </div>
 
