--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
         <div class="grid_layer">
             <div class="name grid_text">
               <div class="myname">Nikolay<br>Semenov</div>
-              <div class="subt"><span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Chief Scientific Officer and <abbr title="Chief Technology Officer">CTO</abbr> in <a
-                    href="https://bpacks.eco">Bpacks</a> Lab</span></div>
+              <div class="subt">
+                <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Chief Scientific Officer and <abbr title="Chief Technology Officer">CTO</abbr> in <a
+                    href="https://bpacks.eco">Bpacks</a> Lab</span>
+            </div>
+
+            <div class="subt_other">
+              <ul>
+                <li>Senior Researcher, Institute of Applied Mechanics Moscow, iam.ras.ru</li>
+                <li>Director of innovation (CSO), eco-startup BERЁZKA, woodcup.ru</li>
+                <li>Technology Consultant, Self-employer, nikolaysemenov.ru</li>
+              </ul>
+            </div>
+
             </div>
             <div class="titel grid_text">
               <div class="ttl">Polymer Scientist,<br>Engineer.</div>
