--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <div class="name grid_text">
               <div class="myname">Nikolay<br>Semenov</div>
               <div class="subt">
-                <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">Chief Scientific Officer in <a
-                    href="https://bpacks.eco">Bpacks</a> Lab</span>
+<span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer"><abbr title="Chief Scientifical Officer">CSO</abbr> in <a href="https://bpacks.eco">Bpacks</a> Lab</span>
             </div>
             <!--and <abbr title="Chief Technology Officer">CTO</abbr> -->
 
