--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="name grid_text">
               <div class="myname">Nikolay<br>Semenov</div>
               <div class="subt">
-<span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer"><abbr title="Chief Scientific Officer">CSO</abbr> in <a href="https://bpacks.eco">Bpacks</a> Lab</span>
+              <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer"><abbr title="Chief Scientific Officer">CSO</abbr> in <a href="https://bpacks.eco">Bpacks</a> Lab</span>
             </div>
             <!--and <abbr title="Chief Technology Officer">CTO</abbr> -->
 
@@ -57,7 +57,7 @@
                 <ul class="social_round">
                   <li><a href="https://www.youtube.com/channel/UCMXMWV1WJLaMRaTcsEFLWVA"><i class="icon-youtube"></i></a></li>
                   <li><a href="https://www.flickr.com/photos/nikolaysemenov/"><i class="icon-instagram"></i></a></li>
-                  <li><a href=""><i class="icon-twitter"></i> </a></li>
+                  <li><a href="https://x.com/Ksider"><i class="icon-twitter"></i> </a></li>
                   <li><a href="https://yandex.ru/q/profile/ksider/"><i class="icon-award"></i></a></li>
                 </ul>
             
@@ -87,9 +87,6 @@
 </div>
     
 </div>
-
-
-
 
 
 <script>
