--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     
 <div class="first_page">
-    <div class="dot_layer">&nbsp;</div> 
+    <!-- <div class="dot_layer">&nbsp;</div>  -->
     
         <div class="grid_layer">
             <div class="name grid_text">
