--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             </div>
             <!--and <abbr title="Chief Technology Officer">CTO</abbr> -->
 
-            <div class="subt_other">
+            <!-- <div class="subt_other">
               <ul>
                 <li>Senior Researcher, Institute of Applied Mechanics Moscow, iam.ras.ru</li>
                 <li>Director of innovation (CSO), eco-startup BERЁZKA, woodcup.ru</li>
                 <li>Technology Consultant, Self-employer, nikolaysemenov.ru</li>
               </ul>
-            </div>
+            </div> -->
 
             </div>
 
@@ -74,15 +74,15 @@
 <div class="seconf_layer">&nbsp;
 
   <div class="m_grid_text">
-  <div class="subt ">
+  <div class="subt wow animate__animated animate__fadeInUp">
     <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO<br><a
     href="https://bpacks.eco">Bpacks</a> Lab</span>
   </div>
 
-  <div class="titel ">
-    <div class="ttl">Polymer Scientist,<br>Engineer.</div>
+  <div class="titel">
+    <div class="ttl wow animate__animated animate__fadeInUpBig">Polymer Scientist,<br>Engineer.</div>
     <div class="social_block">
-      <ul class="social_round">
+      <ul class="social_round wow animate__animated animate__fadeInLeftBig">
         <li><a href="https://t.me/nikolaysemenov"><i class="icon-send"></i></a></li>
         <li><a href="https://ru.linkedin.com/in/nikolay-semenov-ab5b3957"><i class="icon-linkedin"></i></a></li>
       </ul>
