--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
   <div class="m_grid_text">
   <div class="subt wow animate__animated animate__fadeInUp">
-    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO<br><a
-    href="https://bpacks.eco">Bpacks</a> Lab</span>
+    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO<br>Bpacks Lab</span>
   </div>
 
   <div class="titel">
